tests/positive/break_basic.em
int main() {
    int x = 0;
    while (true) {
        x = x + 1;
        if (x > 5) {
            break;
        }
    }
    return x;
}