tests/negative/break_typical.em
int main() {
    if (true) {
        break;
    }
    return 0;
}